# audio_program

./: AudioMixer.cpp  AudioMixer.h  CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  PlayerAudio.cpp  PlayerAudio.h  PlayerGUI.cpp  PlayerGUI.h  PlaylistComponent.cpp  PlaylistComponent.h  README.md  SessionManager.cpp  SessionManager.h  Taglib Install Instructions.txt  WaveformDisplay.cpp  WaveformDisplay.h
